from fuse import FUSE, Operations


class DistributedFileSystem(Operations):
    def __init__(self):
        # Initialize connection to leader node
        self.channel = grpc.insecure_channel("leader_node_address")
        self.stub = dfs_pb2_grpc.LeaderServiceStub(self.channel)

    def getattr(self, path, fh=None):
        # Implement getattr by querying metadata
        pass

    def readdir(self, path, fh):
        # Implement readdir by listing files/directories
        pass

    def open(self, path, flags):
        # Implement open (may not need to do anything)
        pass

    def read(self, path, size, offset, fh):
        # Implement read by calling ReadFile on leader
        response = self.stub.ReadFile(dfs_pb2.FileReadRequest(file_name=path))
        return response.data[offset: offset + size]

    def write(self, path, data, offset, fh):
        # Implement write by sending data to leader
        response = self.stub.UploadFile(
            dfs_pb2.FileUploadRequest(file_name=path, data=data)
        )
        return len(data)

    def create(self, path, mode, fi=None):
        # Implement create (may be similar to write)
        pass

    def unlink(self, path):
        # Implement delete by calling DeleteFile on leader
        response = self.stub.DeleteFile(
            dfs_pb2.FileDeleteRequest(file_name=path))
        return 0 if response.success else -1


if __name__ == "__main__":
    fuse = FUSE(DistributedFileSystem(),
                mountpoint="/mnt/dfs", foreground=True)
